--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
@@ -22,8 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client -- --port 3001\"",
-    "server": "node server.js",
+    "start": "npm-run-all --parallel server client",
+    "server": "node server/server",
     "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,6 +52,7 @@
     "concurrently": "^8.2.2",
     "daisyui": "^3.9.4",
     "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.5"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
