--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -26,7 +31,7 @@
   },
   "scripts": {
     "start": "npm-run-all --parallel server client",
-    "server": "node server/server",
+    "server": "nodemon server/server",
     "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
