--- a/package.json
+++ b/package.json
@@ -3,32 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.1",
+    "@fontsource/roboto": "^5.0.13",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.2",
     "config": "^3.3.11",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.0",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.69.5",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.77.4",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.0.1"
   },
   "scripts": {
     "start": "npm-run-all --parallel server client",
@@ -58,10 +57,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "daisyui": "^3.9.4",
-    "nodemon": "^3.0.1",
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.3.5"
+    "nodemon": "^3.1.2",
+    "npm-run-all": "^4.1.5"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "db.js",
