--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0-beta-26f2496093-20240514",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0-beta-26f2496093-20240514",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
