--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "19.0.0-rc-100dfd7dab-20240701",
     "react-hook-form": "^7.51.5",
+    "react-image-crop": "^11.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
